--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,6 @@ dependencyResolutionManagement {
 }
 rootProject.name = "yugioh-forbidden-memories-helper"
 include ':app'
+include ':core'
+include ':core:database'
+include ':core:domain'
