--- a/core/domain/build.gradle
+++ b/core/domain/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
 }
 
@@ -8,7 +8,6 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.domain"
         minSdk 24
         targetSdk 33
         versionCode 1
@@ -34,6 +33,7 @@ android {
 
 dependencies {
 
+    implementation(libs.koin)
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
