--- a/core/database/build.gradle
+++ b/core/database/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
+apply plugin: 'kotlin-kapt'
+
 android {
     namespace 'com.example.database'
     compileSdk 33
@@ -35,8 +37,10 @@ dependencies {
 
     implementation(libs.room.ktx)
     implementation(libs.room.runtime)
-    implementation(libs.room.compiler)
-    implementation(libs.jsoup)
+    kapt(libs.room.compiler)
+    implementation(libs.koin)
+
+    implementation(project(":core:domain"))
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
