Creating unit tests

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 room = "2.4.1"
 jsoup = "1.16.1"
 koin = "3.2.0"
+mockk = "1.13.5"
 
 [libraries]
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
@@ -9,3 +10,4 @@ room-compiler = { group = "androidx.room", name = "room-compiler", version.ref =
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 jsoup = { group = "org.jsoup", name = "jsoup", version.ref = "jsoup"}
 koin = { group = "io.insert-koin", name = "koin-android", version.ref = "koin" }
+mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk"}
