--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ room = "2.4.1"
 jsoup = "1.16.1"
 koin = "3.2.0"
 mockk = "1.13.5"
+gson = "2.10.1"
 
 [libraries]
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
@@ -11,3 +12,4 @@ room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 jsoup = { group = "org.jsoup", name = "jsoup", version.ref = "jsoup"}
 koin = { group = "io.insert-koin", name = "koin-android", version.ref = "koin" }
 mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk"}
+gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson"}
