Creating basic screen for cards flow

--- a/settings.gradle
+++ b/settings.gradle
@@ -18,3 +18,6 @@ include ':core'
 include ':core:database'
 include ':core:domain'
 include ':core:network'
+include ':feature'
+include ':feature:cards'
+include ':feature:designsystem'
