--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ jsoup = "1.16.1"
 koin = "3.2.0"
 mockk = "1.13.5"
 gson = "2.10.1"
+nav = "2.5.3"
 
 [libraries]
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
@@ -13,3 +14,5 @@ jsoup = { group = "org.jsoup", name = "jsoup", version.ref = "jsoup"}
 koin = { group = "io.insert-koin", name = "koin-android", version.ref = "koin" }
 mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk"}
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson"}
+nav-fragment = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "nav"}
+nav-ui = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "nav"}
