--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,15 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildscript {
+        repositories {
+            google()
+        }
+        dependencies {
+            classpath(libs.safe.args)
+        }
+    }
 }
 
 configurations {
