--- a/feature/cards/build.gradle
+++ b/feature/cards/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id("androidx.navigation.safeargs.kotlin")
 }
 
 android {
@@ -38,6 +39,7 @@ android {
 dependencies {
 
     implementation(libs.koin)
+    implementation(libs.koin.navigation)
     implementation(libs.nav.ui)
     implementation(libs.nav.fragment)
 
