--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,9 @@ room-compiler = { group = "androidx.room", name = "room-compiler", version.ref =
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 jsoup = { group = "org.jsoup", name = "jsoup", version.ref = "jsoup"}
 koin = { group = "io.insert-koin", name = "koin-android", version.ref = "koin" }
+koin-navigation = { group = "io.insert-koin", name = "koin-androidx-navigation", version.ref = "koin" }
 mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk"}
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson"}
 nav-fragment = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "nav"}
 nav-ui = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "nav"}
+safe-args = { group = "androidx.navigation", name = "navigation-safe-args-gradle-plugin", version.ref = "nav" }
