Creating bottom menu

--- a/settings.gradle
+++ b/settings.gradle
@@ -21,3 +21,4 @@ include ':core:network'
 include ':feature'
 include ':feature:cards'
 include ':feature:designsystem'
+include ':feature:characters'
