--- a/settings.gradle
+++ b/settings.gradle
@@ -22,3 +22,4 @@ include ':feature'
 include ':feature:cards'
 include ':feature:designsystem'
 include ':feature:characters'
+include ':feature:fusion'
