--- a/feature/designsystem/build.gradle
+++ b/feature/designsystem/build.gradle
@@ -36,6 +36,10 @@ android {
 
 dependencies {
 
+    implementation(libs.nav.ui)
+    implementation(libs.nav.fragment)
+    implementation(libs.nav.common)
+
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
