--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,5 +18,6 @@ mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk"}
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson"}
 nav-fragment = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "nav"}
 nav-ui = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "nav"}
+nav-common = { group = "androidx.navigation", name = "navigation-common-ktx", version.ref = "nav"}
 safe-args = { group = "androidx.navigation", name = "navigation-safe-args-gradle-plugin", version.ref = "nav" }
 flow-layout = { group = "com.google.android.flexbox", name = "flexbox", version.ref = "flowLayout" }
